# SMB-Cybersecurity

./: .env.example  .eslintrc.js  .gitignore  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: agent-build.yml  ci.yml  deploy.yml
apps/agent-mac/: Cargo.toml
apps/agent-mac/src/: config.rs  main.rs
apps/agent-mac/src/dns/: mod.rs
apps/agent-mac/src/esf/: mod.rs
apps/agent-mac/src/reporter/: mod.rs
apps/agent-mac/src/scanner/: mod.rs
apps/agent-windows/: Cargo.toml
apps/agent-windows/src/: config.rs  main.rs
apps/agent-windows/src/dns/: mod.rs
apps/agent-windows/src/etw/: mod.rs
apps/agent-windows/src/reporter/: mod.rs
apps/agent-windows/src/scanner/: mod.rs
apps/api/: Dockerfile  jest.config.ts  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/__tests__/: health.test.ts  setup.ts
apps/api/src/integrations/: google-workspace.ts  gophish.ts  hibp.ts  microsoft-graph.ts  safe-browsing.ts  stripe.ts  virustotal.ts
apps/api/src/jobs/: breach-scan.job.ts  email-scan.job.ts  simulation.job.ts  weekly-report.job.ts
apps/api/src/lib/: auth.ts  email.ts  redis.ts  websocket.ts
apps/api/src/middleware/: auth.ts  rate-limit.ts
apps/api/src/routes/: billing.ts  breach.ts  dashboard.ts  devices.ts  dns.ts  email-scans.ts  employees.ts  index.ts  reports.ts  (+4 more)
apps/dashboard/: .env.local.example  .eslintrc.json  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/lib/: api.ts  auth.ts  utils.ts
apps/dashboard/store/: dashboard.ts
(+32 files in other folders)
