[package]
name = "shielddesk-agent-windows"
version = "1.0.0"
edition = "2021"
authors = ["ShieldDesk"]
description = "ShieldDesk security agent for Windows"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_System_EventLog", "Win32_Foundation"] }
winreg = "0.52"

[[bin]]
name = "shielddesk-agent"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
